Update project to use lombok and create testContainer